# KLIN

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile.triton  Instruction  LICENSE  ML_System_Design_Doc.md  Makefile  README.md  alembic.ini  docker-compose.infra.yml  docker-compose.yml  dvc.yml  example.env  main.py  mlflow.db  prometheus.yml  pyproject.toml  requirements.txt  ss.py  start.bat  structure
.github/: CODEOWNERS
.github/workflows/: cd.yml  ci.yml  rollback.yml
.pylint.d/: app.presentation.faststream.app_1.stats
MAE/app/: ioc.py
MAE/app/application/dto/: Klin.py  MAE.py  __init__.py
MAE/app/application/interfaces/: MAE.py  __init__.py
MAE/app/application/services/: MAE.py
MAE/app/config/: settings.py
MAE/app/infrastructure/producers/: Klin.py  MAE.py  __init__.py
MAE/app/models/: Klin.py  MAE.py  __init__.py
MAE/data/raw/: KLIN.dvc
MAE/src/: api.py
YOLO/app/: ioc.py
YOLO/app/config/: settings.py
YOLO/app/models/: __init__.py  yolo.py
airflow/dags/: batch.py  batch_dag_config.py  klin_batch_s3.py  klin_batch_seed_s3.py  test_dag.py
app/: bootstrap.py  ioc.py
app/application/: __init__.py  exceptions.py
app/application/consumers/: __init__.py  stream_event_consumer.py  stream_event_service.py
app/application/dto/: Klin.py  MAE.py  __init__.py  auth.py  klin.py
app/application/interfaces/: Klin.py  MAE.py  __init__.py  klin.py
app/application/mappers/: __init__.py  klin.py
app/application/services/: Klin.py  MAE.py  __init__.py  klin.py  stream.py
app/batch/: __init__.py  inspect_batch_inputs.py  run_batch.py  s3_batch_support.py  seed_fake_batch.py
app/config/: __init__.py  base.py  exceptions.py  settings.py
app/frontend/: .env.development  app.py  index.html  mock.html  package-lock.json  package.json  run.py  todo.md  vite.config.ts
app/frontend/src/: App.tsx  main.tsx
app/frontend/templates/: index.html
app/frontend/tests/: main.tsx
app/infrastructure/database/: __init__.py  health.py
app/infrastructure/helpers/: __init__.py  config_helper.py  logging_helper.py  math_helper.py  send_to_db.py  time_range_helper.py  triton_helper.py
app/infrastructure/producers/: MAE.py  __init__.py  klin.py
app/infrastructure/services/: __init__.py  _lazy_loader.py  callback_sender.py  inference_stub.py  s3_storage.py  stream_stub.py
app/models/: Klin.py  MAE.py  __init__.py  base.py  business_process.py  klin.py  mae_process.py  process_base.py  x3d_process.py  yolo_process.py
app/presentation/faststream/: app.py
app/presentation/faststream_stream/: app.py
app/presentation/litestar/: app.py  auth.py  run.py
app_yolo/application/dto/: yolo.py
app_yolo/application/interfaces/: __init__.py  yolo.py
app_yolo/application/services/: __init__.py
app_yolo/config/: settings.py
app_yolo/presentation/faststream/: app.py
app_yolo/presentation/litestar/: app.py
data/raw/: .gitignore  KLIN.dvc
docker/: Dockerfile  Dockerfile.airflow  Dockerfile.api  Dockerfile.frontend  Dockerfile.queue  Dockerfile.triton  docker-compose.deploy.yml  docker-compose.infra.yml  docker-compose.server.yml  docker-compose.yml
docker/postgres/: bootstrap.sh
docs/: ML_System_Design_Doc.md  STREAM_AND_KLIN_PROCESSORS_DIAGRAM.md  todos.md  Практические занятия.md
docs/flowcharts/: 01_full_system_topology.md  02_interface_to_implementation_map.md  03_offline_klin_sequence.md  04_internal_offline_processor_pipeline.md  05_streaming_sequence.md  06_internal_stream_processor_runtime.md  07_data_contract_map.md  08_clean_architecture_isolation.md  README.md
helpers/: __init__.py  _read_all_frames_.py  analyze_safetensors_file.py  model_exporters.py  sync_env.py  videomae_to_onnx.py  x3d_pt_to_onnx.py  yolo_pt_onnx.py  yolo_pt_to_onnx.py
mlflow/: launch  mlflow.db
mlruns/: video_classification_results.csv
model_repository/: README.md
model_repository/videomae_crime/: config.pbtxt
model_repository/x3d_violence/: __init__.py  config.pbtxt  load_x3d_test.py  x3d_inference.py
model_repository/x3d_violence/1/: model.py  x3d_net.py
model_repository/yolo_person/: config.pbtxt
models/: .gitkeep
monitoring/alertmanager/: alertmanager.yml  render-and-start.sh
monitoring/prometheus/: alert.rules.yml  alert_rules.yml  prometheus.yml
monitoring/telegraf/: telegraf.conf
prometheus/: prometheus.yml
remote/: api.py  ds.py  evaluated.py  evaluation.py  metric.py  metrics_check.py  train.py  wa.py
sandbox/: Plan.md  Yolo_testing.py  check_stream_processor.py  combine_datasets.py  get_metrics.py  metrics_check.py  test-videmae-ufc.py  test_stuff.py  train.py  yolo_test.py
sandbox/frontend/: Dockerfile  s3.txt
sandbox/frontend/src/: App.tsx
sandbox/src/: api.py  eda_action_splits.py  predict.py  train.py  video_classifier.py  videomae.ipynb  yolo_pt_onnx.py
sandbox/src/videomae-ufc-crime/: test-videmae-ufc.py  train.py
sandbox/src/web/: appp.py
src/: api.py  evaluation.py  metrics_check.py  predict.py  preprocess.py  run_all.py  train.py  video_classifier.py
src/videomae-ufc-crime/: test-videmae-ufc.py  train.py
src/web/: app.py  appp.py
src/web/templates/: index.html
test/: Plan.md  combine_datasets.py  test_data_loader.py  test_stuff.py
tests/: conftest.py  test_business_processor.py  test_config_base.py  test_db_health.py  test_klin_mae.py  test_klin_service.py  test_klin_state.py  test_klin_x3d.py  test_klin_yolo.py  test_model_exporters.py  test_producers.py  test_schema_compatibility.py  test_services.py  test_settings.py  test_streaming.py  test_sync_env.py
tests/smoke/: test_klin_mae.py  test_klin_state.py  test_klin_x3d.py  test_klin_yolo.py
tests/unit/: test_batch_runner.py  test_config_base.py  test_faststream_entrypoints.py  test_ioc_imports.py  test_litestar_presentation.py  test_producers.py  test_s3_and_callback.py  test_schema_compatibility.py  test_seed_fake_batch.py  test_services.py  test_settings.py  test_stream_event_consumer_more.py  test_stream_service.py  test_streaming.py  test_sync_env.py  test_triton_and_processors.py
(+98 files in other folders)
