[project]
name = "klin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "albumentations==2.0.4",
    "asyncpg>=0.31.0",
    "dishka>=1.7.2",
    "fastapi>=0.127.0",
    "faststream[cli,prometheus,rabbit]>=0.6.6",
    "httpx>=0.28.1",
    "litestar[prometheus,structlog]>=2.19.0",
    "mlflow>=3.8.1",
    "msgspec>=0.20.0",
    "pandas>=2.3.3",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.7.2",
    "torch>=2.10.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.3",
    "yt-dlp>=2025.12.8",
    "ultralytics==8.4.14",
    "evaluate>=0.4.6",
    "supervision==0.22.0",
    "timm==1.0.14",
    "sqlalchemy[asyncio]>=2.0.46",
    "alembic>=1.18.4",
    "python-dotenv>=1.2.1",
    "pytorchvideo>=0.1.5",
    "onnx>=1.20.1",
    "onnxscript>=0.6.2",
    "apache-airflow>=3.1.0",
    "tritonclient[http]>=2.66.0",
]


[dependency-groups]
app_docker = [
    "aiohttp>=3.13.3",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "dishka>=1.8.0",
    "faststream[cli,rabbit]>=0.6.6",
    "granian>=2.7.2",
    "litestar[prometheus,structlog]>=2.21.0",
    "msgspec>=0.20.0",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.13.0.92",
    "python-dotenv>=1.2.1",
    "sqlalchemy[asyncio]>=2.0.46",
]


dev = [
    "mypy>=1.5.8",
    "pandas-stubs",
    "types-requests>=2.32.4.20260107",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "flake8>=7.3.0",
    "pylint>=4.0.5",
    "uvicorn>=0.41.0",
    "pytest-asyncio>=1.3.0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]



[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
exclude = ["data", "videomae_results", "mlflow", "mlruns", "sandbox", "model_repository"]
plugins = []

[[tool.mypy.overrides]]
module = ["ultralytics", "yt_dlp", "aiofiles"]
ignore_missing_imports = true



[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes (flake8)
    "I",  # isort
    "B",  # bugbear
    "UP", # pyupgrade
]
isort.lines-after-imports = 2

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["--import-mode=prepend"]
markers = [
    "???: tests that require a running ??? inference server",
]
