[project]
name = "klin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "async_timeout>=5.0.1",
    "dishka>=1.7.2",
    "litestar[prometheus,structlog]>=2.19.0",
    "msgspec>=0.20.0",
    "sqlalchemy[asyncio]>=2.0.46",
    "alembic>=1.18.4",
    "python-dotenv>=1.2.1",
    "onnx>=1.20.1",
    "apache-airflow>=3.1.0",
    "tritonclient[grpc,http]>=2.66.0",
    "grpcio>=1.67.1",
    "grpcio-tools>=1.67.1",
    "faststream[cli,rabbit]>=0.6.6",
    "boto3>=1.42.73",
]


[dependency-groups]

ml = [
    "torch>=2.10.0",
    "pytorchvideo>=0.1.5",
    "albumentations==2.0.4",
    "evaluate>=0.4.6",
    "mlflow>=3.8.1",
    "accelerate>=1.12.0",
    "torchvision>=0.24.0",
    "onnxscript>=0.6.2",
    "onnxruntime-gpu==1.23.2",
    "onnxslim>=0.1.87",
]

dev = [
    "torch>=2.10.0",
    "yt-dlp>=2025.12.8",
    "ty>=0.0.29",
    "types-requests>=2.32.4.20260107",
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
    "flake8>=7.3.0",
    "pylint>=4.0.5",
    "uvicorn>=0.41.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "boto3-stubs[s3]>=1.42.73",
    # general ML DEPENDENCIES LOWER
    "ultralytics==8.4.14",
    "transformers>=4.57.3",
]

ci = [
    "ty>=0.0.29",
    "boto3-stubs[s3]>=1.42.73",
    "types-requests>=2.32.4.20260107",
    "ruff>=0.14.10",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "opencv-python-headless>=4.13.0.92",
]

ci-helpers = [
    "torch>=2.10.0",
    "transformers>=4.57.3",
    "safetensors>=0.7.0",
]


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]


[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 88
target-version = "py310"
exclude = ["versions"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes (flake8)
    "I",  # isort
    "B",  # bugbear
    "UP", # pyupgrade
]
isort.lines-after-imports = 2
exclude = ["versions"]


[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
exclude = [
    "bin", "**/versions", "sandbox", "model_repository"
]



[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests/unit"]
addopts = [
    "--import-mode=prepend",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "???: tests that require a running ??? inference server",
]

[tool.coverage.run]
branch = true
relative_files = true
source = ["app"]
omit = [
    "*/__init__.py",
    "app/infrastructure/database/migrations/*",
    "app/infrastructure/database/migrations/**/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"
